--- a/src/layouts/HomeLayout.astro
+++ b/src/layouts/HomeLayout.astro
@@ -14,5 +14,8 @@ import Cover from "../components/section/Cover.astro";
       porro doloremque beatae qui quae molestias sit pariatur consectetur. Hic,
       aliquid saepe?
     </p>
+    <form action="api/send">
+      <button type="submit"> Send Test Email </button>
+    </form>
   </div>
 </section>
