--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -22,5 +22,5 @@ import { SITE_DESCRIPTION, SITE_TITLE } from "../consts";
       feather.replace();
     </script>
   </body>
-  <Footer />
+  <!-- <Footer /> -->
 </html>
