--- a/src/components/navigation/Sidemenu.astro
+++ b/src/components/navigation/Sidemenu.astro
@@ -6,7 +6,7 @@ import { Icon } from "astro-icon/components";
 ---
 
 <section
-  class="top-4 sticky flex flex-col items-center gap-4 max-w-xs"
+  class="top-6 sticky flex flex-col items-center gap-4 max-w-xs"
   
 >
   <div class="flex flex-col items-center gap-4 bg-white shadow-lg shadow-neutral-200 px-6 py-8 rounded-2xl" transition:persist>
@@ -39,7 +39,7 @@ import { Icon } from "astro-icon/components";
   <div class="flex flex-col justify-start bg-white shadow-lg shadow-neutral-200 px-6 py-4 py-8 rounded-2xl w-full">
     <Link leadingIcon="home" label="Home" url="/" />
     <Link leadingIcon="file-text" label="About" url="/about" />
-    <Link leadingIcon="book" label="Blog" url="/" />
+    <Link leadingIcon="book" label="Blog" url="/blog" />
     <Link leadingIcon="code" label="Projects" url="/" />
     <Link leadingIcon="edit-3" label="Artworks" url="/" />
     <Link leadingIcon="award" label="Attribution" url="/" />
