--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,13 +1,14 @@
 ---
+/** biome-ignore-all lint/correctness/noUnusedImports: <-> */
+/** biome-ignore-all assist/source/organizeImports: <-> */
 import BlogPostCard from "../components/content/BlogPostCard.astro";
 import ServiceCard from "../components/content/ServiceCard.astro";
 import MainLayout from "../layouts/MainLayout.astro";
-import {fade} from "astro:transitions";
+import { fade } from "astro:transitions";
 ---
-
 <MainLayout
         title="Atelier | Home"
-        coverSrc="https://placehold.co/800x400"
+        coverSrc="https://placehold.co/900x400"
         transition:animate={fade({duration: "0.4s"})}
 >
     <h1 class="font-extrabold text-4xl">Title of this section</h1>
