--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -26,7 +26,7 @@ const { title, coverSrc } = Astro.props;
         class="flex flex-col gap-12 bg-white shadow-lg shadow-neutral-200 pb-8 rounded-2xl max-w-4xl overflow-hidden"
       >
         <Cover imgSource={coverSrc} />
-        <article class="flex flex-col gap-4 px-14">
+        <article class="flex flex-col gap-4 px-14 text-neutral-800">
           <slot />
         </article>
       </section>
