--- a/src/components/content/BlogPostCard.astro
+++ b/src/components/content/BlogPostCard.astro
@@ -1,14 +1,14 @@
 ---
 import BlogTag from "../badges/BlogTag.astro";
 
-const { tagLabel, tagIcon } = Astro.props;
+const { tagLabel, tagIcon, tagType } = Astro.props;
 ---
 
-<div class="flex shadow-md shadow-neutral-400 rounded-2xl overflow-hidden">
+<div class="flex rounded-2xl outline-[1px] outline-neutral-100 overflow-hidden" style="box-shadow: 2px 2px 4px #bebebe,-2px -2px 4px #ffffff;">
   <div
     class="flex flex-col gap-3 px-8 py-6"
   >
-    <h3 class="font-extrabold text-2xl">Title of Blog</h3>
+    <h3 class="font-bold text-2xl">Title of Blog</h3>
     <p>
       Lorem, ipsum dolor sit amet consectetur adipisicing elit. Soluta excepturi
       aspernatur, quod atque animi neque.
