--- a/src/components/content/BlogPostCard.astro
+++ b/src/components/content/BlogPostCard.astro
@@ -5,29 +5,65 @@ import BlogTag from "../badges/BlogTag.astro";
 const { tagLabel, tagIcon, tagType } = Astro.props;
 ---
 
-<div class="flex rounded-2xl outline-[1px] outline-neutral-100 overflow-hidden" style="box-shadow: 2px 2px 4px #bebebe,-2px -2px 4px #ffffff;">
+<div
+  class="flex rounded-2xl outline-[1px] outline-neutral-100 overflow-hidden"
+  style="box-shadow: 2px 2px 4px #bebebe,-2px -2px 4px #ffffff;"
+>
   <div class="flex flex-col gap-4 px-8 py-6">
     <div class="justify-between grid grid-cols-2">
-      <p class="flex items-center gap-3 text-neutral-500 text-sm whitespace-nowrap">
-        <span class="flex items-center gap-1"><Icon name="mdi:calendar-outline" />01/01/2025</span>
-        <span class="flex items-center gap-0.5"><Icon name="mdi:bookmark-outline" />type</span>
+      <p
+        class="flex items-center gap-3 text-neutral-500 text-sm whitespace-nowrap"
+      >
+        <span class="flex items-center gap-1"
+          ><Icon name="mdi:calendar-outline" />01/01/2025</span
+        >
+        <span class="flex items-center gap-0.5"
+          ><Icon name="mdi:bookmark-outline" />type</span
+        >
       </p>
-      <p class="flex justify-end items-center gap-0.5 text-neutral-500 text-sm whitespace-nowrap">
-        <span class="flex items-center gap-1"><Icon name="mdi:book-open-page-variant" />0 words</span>
+      <p
+        class="flex justify-end items-center gap-0.5 text-neutral-500 text-sm whitespace-nowrap"
+      >
+        <span class="flex items-center gap-1"
+          ><Icon name="mdi:book-open-page-variant" />0 words</span
+        >
         <Icon name="mdi:dot" />
-        <span class="flex items-center gap-0.5"><Icon name="mdi:timer-sand" />0 minutes</span>
+        <span class="flex items-center gap-0.5"
+          ><Icon name="mdi:timer-sand" />0 minutes</span
+        >
       </p>
     </div>
-    <h3 class="pl-2 border-l-6 border-l-blue-700 font-bold hover:text-blue-700 text-2xl transition-colors duration-150 hover:cursor-pointer">Title of Blog</h3>
-    <p class="mt-[-10px]">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Soluta excepturi aspernatur, quod atque animi neque.</p>
+    <h3
+      class="pl-2 border-l-6 border-l-blue-700 w-fit font-bold hover:text-blue-700 text-2xl transition-colors duration-150 hover:cursor-pointer"
+      data-title
+    >
+      <span class="flex items-center gap-2">Title of Blog <Icon name="mdi:chevron-double-right" class="hidden translate-x-[-20px]"/></span>
+      <hr class="border-t-2 border-b-2 w-0" />
+    </h3>
+    <p class="mt-[-10px]">
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Soluta excepturi
+      aspernatur, quod atque animi neque.
+    </p>
     <div class="flex flex-row gap-2">
-      <BlogTag icon="mdi:file-multiple-outline" label="Documentation" color="blue" />
-      <BlogTag icon="mdi:tag-outline" label="Life of an Artist" color="blue" />
+      <BlogTag icon="mdi:folder-open" label="Documentation" color="blue" />
+      <BlogTag
+        icon="mdi:tag-outline"
+        label="Life of an Artist"
+        color="purple"
+      />
     </div>
   </div>
   <a class="relative w-full h-full hover:cursor-pointer" href="/blog">
-    <div class="top-0 right-0 left-0 z-10 absolute bg-zinc-900 opacity-50 w-0 h-full" data-img></div>
-    <img src="https://picsum.photos/300/300" alt="" class="w-full h-full max-h-[260px]"/>
+    <div
+      class="top-0 right-0 left-0 z-10 absolute bg-zinc-900 opacity-50 w-0 h-full"
+      data-img
+    >
+    </div>
+    <img
+      src="https://picsum.photos/300/300"
+      alt=""
+      class="w-full h-full max-h-[260px]"
+    />
   </a>
 </div>
 
@@ -41,7 +77,7 @@ const { tagLabel, tagIcon, tagType } = Astro.props;
         gsap.to(img, {
           width: "100%",
           duration: 0.575,
-          pointerEvents: 'none',
+          pointerEvents: "none",
           zIndex: 1,
           ease: "power4.out",
         });
@@ -51,7 +87,38 @@ const { tagLabel, tagIcon, tagType } = Astro.props;
           width: 0,
           duration: 0.575,
           zIndex: 0,
-          pointerEvents: 'auto',
+          pointerEvents: "auto",
+          ease: "power4.out",
+        });
+      });
+    });
+    const titles = document.querySelectorAll("[data-title");
+    titles.forEach((title) => {
+      title.addEventListener("mouseenter", () => {
+        gsap.to(title.querySelector("hr"), {
+          width: "100%",
+          duration: 0.775,
+          ease: "power4.out",
+        });
+        gsap.to(title.querySelector("svg"), {
+          translateX: -3,
+          display: 'block',
+          opacity: 1,
+          duration: 0.475,
+          ease: "power4.out",
+        });
+      });
+      title.addEventListener("mouseleave", () => {
+        gsap.to(title.querySelector("hr"), {
+          width: 0,
+          duration: 0.575,
+          ease: "power4.out",
+        });
+        gsap.to(title.querySelector("svg"), {
+          translateX: -6,
+          display: 'none',
+          opacity: 0,
+          duration: 0.575,
           ease: "power4.out",
         });
       });
