--- a/src/components/badges/BlogTag.astro
+++ b/src/components/badges/BlogTag.astro
@@ -2,7 +2,7 @@
 import { Icon } from "astro-icon/components";
 
 const { icon, label, color } = Astro.props;
-const DICTIONARY: any = {
+const hoverBG: any = {
 	blue: "hover:bg-blue-700",
 	red: "hover:bg-red-700",
 	amber: "hover:bg-amber-700",
@@ -11,7 +11,7 @@ const DICTIONARY: any = {
 	purple: "hover:bg-purple-700",
 	// …
 };
-const DICTIONARY2: any = {
+const BG: any = {
 	blue: "text-blue-700",
 	red: "text-red-700",
 	amber: "text-amber-700",
@@ -20,14 +20,23 @@ const DICTIONARY2: any = {
 	purple: "text-purple-700",
 	// …
 };
+const lightBG: any = {
+	blue: "bg-blue-50",
+	red: "bg-red-50",
+	amber: "bg-amber-50",
+	green: "bg-green-50",
+	pink: "bg-pink-50",
+	purple: "bg-purple-50",
+	// …
+};
 ---
 
 <p
-  class=`flex items-center gap-2 bg-${color}-50 px-2.5 py-1 rounded-md w-fit hover:cursor-pointer transition-colors duration-150 hover:[&>span]:text-white ${DICTIONARY[color]} hover:[&>svg]:text-white`
+  class=`flex items-center gap-2 ${lightBG[color]} px-2.5 py-1 rounded-md w-fit hover:cursor-pointer transition-colors duration-150 hover:[&>span]:text-white ${hoverBG[color]} hover:[&>svg]:text-white`
   data-tag
 >
-  <Icon name={icon} class=`font-bold ${DICTIONARY2[color]}` />
-  <span class=`font-bold ${DICTIONARY2[color]} text-sm`>
+  <Icon name={icon} class=`font-bold ${BG[color]}` />
+  <span class=`font-bold ${BG[color]} text-sm`>
     {label}
   </span>
 </p>
