--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,4 @@
 ---
-/** biome-ignore-all lint/correctness/noUnusedImports: <-> */
-/** biome-ignore-all assist/source/organizeImports: <-> */
 import { Icon } from "astro-icon/components";
 import BlogPostCard from "../components/content/BlogPostCard.astro";
 import ServiceCard from "../components/content/ServiceCard.astro";
@@ -9,27 +7,27 @@ import { fade } from "astro:transitions";
 ---
 <MainLayout
         title="Atelier | Home"
-        coverSrc="https://placehold.co/900x400"
+        coverSrc="https://picsum.photos/900/400"
         transition:animate={fade({duration: "0.4s"})}
 >
-    <h1 class="flex items-center gap-2 font-extrabold text-blue-700 text-4xl"><Icon name="mdi:stars" /> Title of this section</h1>
-    <p>
+    <h1 class="flex items-center gap-2 bg-clip-text bg-gradient-to-r from-blue-500 to-blue-900 font-extrabold text-transparent text-4xl"><Icon class="text-blue-500" name="mdi:stars" /> Title of this section</h1>
+    <p class="mt-[-4px]">
         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptates
         obcaecati molestiae atque quia placeat, esse inventore, vero excepturi porro
         doloremque beatae qui quae molestias sit pariatur consectetur. Hic, aliquid
         saepe?
     </p>
-    <hr class="my-4 text-neutral-200"/>
-    <h2 class="font-extrabold text-3xl">Recent Posts</h2>
-    <p>
+    <hr class="text-transparent"/>
+    <h2 class="font-extrabold text-2xl">Recent Posts</h2>
+    <p class="mt-[-4px]">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur repellat quisquam perspiciatis maxime velit ratione adipisci incidunt explicabo accusamus nostrum doloribus eum nulla ea, dolores officia voluptatibus sequi provident quod!
     </p>
     <div>
         <BlogPostCard/>
     </div>
-    <hr class="my-4 text-neutral-200"/>
-    <h2 class="font-extrabold text-3xl">My Services</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In fugiat et explicabo corrupti repudiandae fuga natus
+    <hr class="my-2 text-transparent"/>
+    <h2 class="font-extrabold text-2xl">My Services</h2>
+    <p class="mt-[-4px]">Lorem ipsum dolor sit amet consectetur adipisicing elit. In fugiat et explicabo corrupti repudiandae fuga natus
         neque vitae</p>
     <div class="flex flex-col gap-4">
         <ServiceCard icon="mdi:art" title="Art Commissions">
@@ -41,6 +39,6 @@ import { fade } from "astro:transitions";
             just a drawing, but is a conveyed experience~
         </ServiceCard>
     </div>
-    <hr class="my-4 text-neutral-200"/>
-    <h2 class="flex items-center gap-2 font-extrabold text-3xl"><Icon name="mdi:stars" /> Title of this section</h2>
+    <hr class="my-2 text-transparent"/>
+    <h2 class="flex items-center gap-2 font-extrabold text-2xl"><Icon name="mdi:stars" /> Title of this section</h2>
 </MainLayout>
