--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,40 +5,91 @@ import ServiceCard from "../components/content/ServiceCard.astro";
 import MainLayout from "../layouts/MainLayout.astro";
 import { fade } from "astro:transitions";
 ---
+
 <MainLayout
-        title="Atelier | Home"
-        coverSrc="https://picsum.photos/900/400"
-        transition:animate={fade({duration: "0.4s"})}
+  title="Atelier | Home"
+  coverSrc="https://picsum.photos/900/400"
+  transition:animate={fade({ duration: "0.4s" })}
 >
-    <h1 class="flex items-center gap-2 bg-clip-text bg-gradient-to-r from-blue-500 to-blue-900 font-extrabold text-transparent text-4xl"><Icon class="text-blue-500" name="mdi:stars" /> Title of this section</h1>
-    <p class="mt-[-4px]">
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptates
-        obcaecati molestiae atque quia placeat, esse inventore, vero excepturi porro
-        doloremque beatae qui quae molestias sit pariatur consectetur. Hic, aliquid
-        saepe?
-    </p>
-    <hr class="text-transparent"/>
-    <h2 class="font-extrabold text-2xl">Recent Posts</h2>
-    <p class="mt-[-4px]">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur repellat quisquam perspiciatis maxime velit ratione adipisci incidunt explicabo accusamus nostrum doloribus eum nulla ea, dolores officia voluptatibus sequi provident quod!
-    </p>
-    <div>
-        <BlogPostCard/>
+  <h1
+    class="flex items-center self-center gap-2 bg-clip-text bg-gradient-to-r from-blue-500 to-blue-900 mt-1 font-extrabold text-transparent text-4xl"
+  >
+    <Icon class="text-blue-500" name="mdi:stars" /> Kiseki's Atelier
+  </h1>
+  <p
+    class="flex flex-col items-center gap-4 mt-[-4px] text-neutral-500 text-center"
+  >
+    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptates
+    obcaecati molestiae atque quia placeat, esse inventore, vero excepturi porro
+    doloremque beatae qui quae molestias sit pariatur consectetur. Hic, aliquid
+    saepe.
+    <div class="flex items-center self-center gap-2">
+      <a
+        href="/"
+        class="flex items-center gap-2 bg-blue-500 hover:bg-blue-700 px-4 py-2 border-2 border-blue-500 hover:border-blue-700 rounded-xl w-fit text-white text-sm transition-all duration-150"
+        ><Icon name="mdi:email" />Explore Blog</a
+      >
+      <a
+        href="/"
+        class="flex items-center gap-2 hover:bg-neutral-800 px-4 py-2 border-2 border-neutral-800 rounded-xl w-fit text-neutral-800 hover:text-white text-sm transition-all duration-150"
+        ><Icon name="mdi:email" />Contact Me!</a
+      >
     </div>
-    <hr class="my-2 text-transparent"/>
-    <h2 class="font-extrabold text-2xl">My Services</h2>
-    <p class="mt-[-4px]">Lorem ipsum dolor sit amet consectetur adipisicing elit. In fugiat et explicabo corrupti repudiandae fuga natus
-        neque vitae</p>
-    <div class="flex flex-col gap-4">
-        <ServiceCard icon="mdi:art" title="Art Commissions">
-            Would you like to bring your ideas to life? Let's work together and make those concepts a reality–is not
-            just a drawing, but is a conveyed experience~
-        </ServiceCard>
-        <ServiceCard icon="mdi:art" title="Art Commissions">
-            Would you like to bring your ideas to life? Let's work together and make those concepts a reality–is not
-            just a drawing, but is a conveyed experience~
-        </ServiceCard>
-    </div>
-    <hr class="my-2 text-transparent"/>
-    <h2 class="flex items-center gap-2 font-extrabold text-2xl"><Icon name="mdi:stars" /> Title of this section</h2>
+  </p>
+  <hr class="my-2 text-transparent" />
+  <h2 class="flex items-center gap-2 font-extrabold text-3xl">
+    <Icon name="mdi:book-multiple" />Recent Posts
+  </h2>
+  <p class="mt-[-4px]">
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur
+    repellat quisquam perspiciatis maxime velit ratione adipisci incidunt
+    explicabo accusamus nostrum doloribus eum nulla ea, dolores officia
+    voluptatibus sequi provident quod!
+  </p>
+  <div class="flex flex-col gap-4">
+    <BlogPostCard />
+    <BlogPostCard />
+    <BlogPostCard />
+  </div>
+  <hr class="my-2 text-transparent" />
+  <h2 class="flex items-center gap-2 font-extrabold text-3xl">
+    <Icon name="mdi:briefcase-edit" />Services
+  </h2>
+  <p class="mt-[-4px]">
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. In fugiat et
+    explicabo corrupti repudiandae fuga natus neque vitae
+  </p>
+  <div class="flex flex-col gap-4">
+    <ServiceCard icon="mdi:cube-scan" title="Pixel Art">
+      Would you like to bring your ideas to life? Let's work together and make
+      those concepts a reality–is not just a drawing, but a dream come true~
+    </ServiceCard>
+    <ServiceCard icon="mdi:art" title="Character Design" ref="/about">
+      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Id sed
+      distinctio libero illum eius repudiandae beatae facere eligendi autem,
+      officiis tempora amet eaque nesciunt, esse minus odit quaerat quis sit.
+    </ServiceCard>
+    <ServiceCard icon="mdi:webpack" title="Frontend Web Development">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis dolore
+      id voluptatum atque magnam officia, praesentium sequi aut vero ab,
+      molestias sit fugiat distinctio accusantium. Tempore quibusdam modi est
+      voluptate!
+    </ServiceCard>
+    <ServiceCard icon="mdi:webhook" title="Task Automation">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere
+      necessitatibus magni maxime provident. Laborum, exercitationem animi
+      inventore ratione eveniet aspernatur a minima sed perferendis rem itaque,
+      reprehenderit autem non recusandae!
+    </ServiceCard>
+  </div>
+  <hr class="my-2 text-transparent" />
+  <h2 class="flex items-center gap-2 font-extrabold text-3xl">
+    <Icon name="mdi:stars" /> Title of this section
+  </h2>
+  <p class="mt-[-4px]">
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur
+    repellat quisquam perspiciatis maxime velit ratione adipisci incidunt
+    explicabo accusamus nostrum doloribus eum nulla ea, dolores officia
+    voluptatibus sequi provident quod!
+  </p>
 </MainLayout>
