started about page

--- a/src/components/badges/Tag.astro
+++ b/src/components/badges/Tag.astro
@@ -3,6 +3,7 @@ import { Icon } from "astro-icon/components";
 
 const { icon, label, color } = Astro.props;
 const hoverBG: any = {
+  neutral: "hover:bg-neutral-700",
 	blue: "hover:bg-blue-700",
 	red: "hover:bg-red-700",
 	amber: "hover:bg-amber-700",
@@ -12,6 +13,7 @@ const hoverBG: any = {
 	// …
 };
 const BG: any = {
+  neutral: "text-neutral-700",
 	blue: "text-blue-700",
 	red: "text-red-700",
 	amber: "text-amber-700",
@@ -21,6 +23,7 @@ const BG: any = {
 	// …
 };
 const lightBG: any = {
+  neutral: "bg-neutral-100",
 	blue: "bg-blue-50",
 	red: "bg-red-50",
 	amber: "bg-amber-50",
