--- a/src/components/content/BlogPostCard.astro
+++ b/src/components/content/BlogPostCard.astro
@@ -1,6 +1,6 @@
 ---
 import { Icon } from "astro-icon/components";
-import BlogTag from "../badges/BlogTag.astro";
+import BlogTag from "../badges/Tag.astro";
 
 const { tagLabel, tagIcon, tagType } = Astro.props;
 ---
