--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -1,6 +1,4 @@
 ---
-/** biome-ignore-all lint/correctness/noUnusedImports: <uneeded> */
-/** biome-ignore-all assist/source/organizeImports: <-> */
 import Cover from "../components/section/Cover.astro";
 import BlogPostCard from "../components/content/BlogPostCard.astro";
 import BaseHead from "../components/BaseHead.astro";
@@ -8,7 +6,7 @@ import Sidemenu from "../components/navigation/Sidemenu.astro";
 import { SITE_TITLE, SITE_DESCRIPTION } from "../consts";
 import { ClientRouter, fade, slide } from "astro:transitions";
 
-const { title, coverSrc } = Astro.props;
+const { title, coverSrc, coverPosition } = Astro.props;
 ---
 
 <!doctype html>
@@ -25,7 +23,7 @@ const { title, coverSrc } = Astro.props;
       <section
         class="flex flex-col gap-12 bg-white shadow-lg shadow-neutral-200 pb-8 rounded-2xl max-w-4xl overflow-hidden"
       >
-        <Cover imgSource={coverSrc} />
+        <Cover imgSource={coverSrc} position={coverPosition}/>
         <article class="flex flex-col gap-4 px-14">
           <slot />
         </article>
