--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,7 @@ import { fade } from "astro:transitions";
 
 <MainLayout
   title="Atelier | Home"
-  coverSrc="https://picsum.photos/900/400"
+  coverSrc="../../../src/assets/Unknown.png"
   transition:animate={fade({ duration: "0.4s" })}
 >
   <h1
