--- a/src/components/section/Cover.astro
+++ b/src/components/section/Cover.astro
@@ -1,11 +1,18 @@
 ---
+import { Image } from "astro:assets";
+
 interface Props {
-	imgSource: string;
-    position: string;
+  imgSource: any;
+  position: string;
 }
-const { imgSource, position = 'object-center' } = Astro.props;
+const { imgSource, position = "object-center" } = Astro.props;
 ---
 
 <div>
-    <img src={imgSource} alt="" class=`w-max max-h-[400px] object-cover ${position}`/>
+  <Image
+    src={imgSource}
+    alt=""
+    inferSize={true}
+    class=`w-max max-h-[400px] object-cover ${position}`
+  />
 </div>
