--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,11 +4,13 @@ import BlogPostCard from "../components/content/BlogPostCard.astro";
 import ServiceCard from "../components/content/ServiceCard.astro";
 import MainLayout from "../layouts/MainLayout.astro";
 import { fade } from "astro:transitions";
+
+import imgCover from "../../src/assets/Unknown.png";
 ---
 
 <MainLayout
   title="Atelier | Home"
-  coverSrc="../../../src/assets/Unknown.png"
+  coverSrc={imgCover}
   transition:animate={fade({ duration: "0.4s" })}
 >
   <h1
@@ -25,7 +27,7 @@ import { fade } from "astro:transitions";
     saepe.
     <div class="flex items-center self-center gap-2">
       <a
-        href="/"
+        href="/blog"
         class="flex items-center gap-2 bg-blue-500 hover:bg-blue-700 px-4 py-2 border-2 border-blue-500 hover:border-blue-700 rounded-xl w-fit text-white text-sm transition-all duration-150"
         ><Icon name="mdi:email" />Explore Blog</a
       >
@@ -38,7 +40,7 @@ import { fade } from "astro:transitions";
   </p>
   <hr class="my-2 text-transparent" />
   <h2 class="flex items-center gap-2 font-extrabold text-3xl">
-    <Icon name="mdi:book-multiple" />Recent Posts
+    <Icon name="mdi:book-multiple" class="text-blue-700" />Recent Posts
   </h2>
   <p class="mt-[-4px]">
     Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur
@@ -53,7 +55,7 @@ import { fade } from "astro:transitions";
   </div>
   <hr class="my-2 text-transparent" />
   <h2 class="flex items-center gap-2 font-extrabold text-3xl">
-    <Icon name="mdi:briefcase-edit" />Services
+    <Icon name="mdi:briefcase-edit" class="text-blue-700" />Services
   </h2>
   <p class="mt-[-4px]">
     Lorem ipsum dolor sit amet consectetur adipisicing elit. In fugiat et
@@ -84,7 +86,8 @@ import { fade } from "astro:transitions";
   </div>
   <hr class="my-2 text-transparent" />
   <h2 class="flex items-center gap-2 font-extrabold text-3xl">
-    <Icon name="mdi:stars" /> Title of this section
+    <Icon name="mdi:palette" class="text-blue-700" />Recent
+    Artworks
   </h2>
   <p class="mt-[-4px]">
     Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur
